[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
crossterm = { version = "0.26.0", features = ["event-stream"] }
futures = "0.3.26"
rand = "0.8.5"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tui = { version = "0.19.0" }
